# astroshel-lcd

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
scripts/: env.ps1
src/: cache.rs  command.rs  config.rs  dashboard.rs  device.rs  editor.rs  encode.rs  gui.rs  icon.rs  main.rs  media.rs  pipeline.rs  proto.rs  render.rs  sensors.rs  update.rs  video.rs  winwnd.rs
